@@ -1,3 +1,7 @@
+2008-06-23  Neal H. Walfield  <neal@gnu.org>
+
+	* s-printf.h (s_printf): Use gcc's format attribute.
+
 2008-06-22  Neal H. Walfield  <neal@gnu.org>
 
 	* process-spawn.c (process_spawn): [! NDEBUG]: Only free folios
